[project]
name = "hass-tryfi"
version = "0.0.25"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant>2023.1.1,<2025.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "sentry-sdk>=2.32.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-homeassistant-custom-component>=0.13.195",
    "pytest-timeout>=2.3.1",
]
